fix: weekly period bar top event overflow

--- a/src/styles/PeriodBar.module.css
+++ b/src/styles/PeriodBar.module.css
@@ -45,7 +45,7 @@
 	font-weight: 700;
 	line-height: 1;
 	background-color: white;
-	transform: translateY(-6px);
+	transform: translateY(3px);
 	max-width: 80%;
 	left: 20px;
 	overflow: hidden;
